<resources>
    <string name="app_name">Fifth Feat</string>

    <!--Generics-->
    <string name="text_password_empty">Digite sua senha</string>
    <string name="text_email_invalid">Digite um email válido</string>

    <!--    BottomSheetLogout-->
    <string name="title_logout_bottom_sheet_logout">Sair</string>
    <string name="text_confirm_logout_bottom_sheet_logout">Tem certeza que deseja sair?</string>
    <string name="text_button_logout_bottom_sheet_logout">Sair</string>
    <string name="text_button_cancel_bottom_sheet_logout">Cancelar</string>

    <!--Errors-->
    <string name="account_not_registered_register_fragment">Nenhuma conta encontrada com este e-mail.</string>
    <string name="invalid_email_register_fragment">Insira um e-mail válido.</string>
    <string name="invalid_password_register_fragment">Senha inválida, tente novamente.</string>
    <string name="email_in_use_register_fragment">Este e-mail já está em uso.</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>
    <string name="user_not_found">Usuário/dados não cadastrado(s)</string>
    <string name="invalid_credentials">Login ou senha inválidos</string>
    <string name="error_generic">Ocorreu um erro, por favor tente novamente mais tarde.</string>
    <string name="error_login_google">Login com Google falhou.</string>
    <string name="error_register_google">Cadastro com Google falhou.</string>

    <!--    BottomBar-->
    <string name="title_menu_home">Início</string>
    <string name="title_menu_cart">Carrinho</string>
    <string name="title_menu_orders">Pedidos</string>
    <string name="title_menu_profile">Perfil</string>

    <!--OnboardingFragment-->
    <string name="onboarding_fragment_button_start">Iniciar</string>
    <string name="text_login_google_success_onboarding_fragment">Login com Google concluído</string>

    <!--HomeAuthFragment-->
    <string name="title_home_auth_fragment">Entrar</string>
    <string name="button_continue_with_facebook_home_auth_fragment">Continuar com o Facebook</string>
    <string name="button_continue_with_google_home_auth_fragment">Continuar com o Google</string>
    <string name="text_social_or_password_home_auth_fragment">ou</string>
    <string name="button_sign_in_with_password_home_auth_fragment">Entrar com senha</string>
    <string name="text_dont_have_an_account_home_auth_fragment">Não tem uma conta?</string>
    <string name="text_sign_up_home_auth_fragment">Inscrever-se</string>

    <!--    RegisterFragment-->
    <string name="title_register_fragment">Crie sua conta</string>
    <string name="text_hint_edit_email_register_fragment">Email</string>
    <string name="text_hint_edit_password_register_fragment">Senha</string>
    <string name="text_button_sign_up_register_fragment">Inscrever-se</string>
    <string name="text_continue_social_network_register_fragment">ou continuar com</string>
    <string name="text_email_empty_register_fragment">Digite um e-mail válido</string>
    <string name="text_password_empty_register_fragment">Digite uma senha</string>
    <string name="text_register_success_register_fragment">Cadastro concluído</string>
    <string name="text_login_google_success_register_fragment">Login com Google concluído</string>

    <!--    LoginFragment-->
    <string name="title_login_fragment">Faça login na sua conta</string>
    <string name="text_hint_edit_email_login_fragment">Email</string>
    <string name="text_hint_edit_password_login_fragment">Senha</string>
    <string name="text_button_sign_in_login_fragment">Entrar</string>
    <string name="text_forgot_password_login_fragment">Esqueceu a senha?</string>
    <string name="text_continue_social_network_login_fragment">ou continuar com</string>
    <string name="text_login_success_fragment">Login concluído</string>

    <!--    ForgotFragment-->
    <string name="title_forgot_fragment">Crie sua nova senha</string>
    <string name="text_hint_edit_email_forgot_fragment">Email</string>
    <string name="text_button_forgot_fragment">Recuperar conta</string>
    <string name="email_sent_success_forgot_fragment">Email de recuperação enviado</string>

    <!--    SplashFragment-->
    <string name="slogan_onboard_fragment">Deixe a tecnologia\nimpulsionar seu negócio.\nSimples assim.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>